@@ -1,3 +1,8 @@
+2009-10-29  Michael Banck  <mbanck@gmx.net>
+
+	* src/formats/molproformat.cpp (ReadMolecule): Applied patch #2893477
+	by Konstantin Tokarev to support numbered atoms.
+
 2009-11-06  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/xml/xml.cpp (OpenBabel): Defensive programming for
